--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>About My skills</h3>
-                        <p>HTML5, CSS3, Java, C/C++, MYSQL, pHp, Wordpress, SEO,</p>
-                        <p>Microcontroller, Jsp </p>
+                        <p>HTML5, CSS3, Java, JEE, Eclipse RCP application, C/C++, SQL, php, JSP</p>
+                        <p>Microcontroller</p>
                     </div>
                 </div>
             </div>
@@ -251,7 +251,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; 2014 - Your Name
+                        Copyright &copy; 2016 - Shahriar Robbani
                     </div>
                 </div>
             </div>
