font awasome update..

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="http://jenkins.shahriar.io/">jenkins</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="http://maven.shahriar.io/">maven</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
